fix: prevent scenario loader errors from overflowing screen width

--- a/src/components/Main/ScenarioLoader/ScenarioLoader.scss
+++ b/src/components/Main/ScenarioLoader/ScenarioLoader.scss
@@ -143,6 +143,7 @@ $md: map.get($grid-breakpoints, 'md');
 
 .scenario-loader-uploader-error-list-item {
   margin: 0.25em 0;
+  overflow-wrap: anywhere;
 }
 
 .preset-loader-button {
